--- a/FinalTuyetMaiPham/MainWindow.xaml
+++ b/FinalTuyetMaiPham/MainWindow.xaml
@@ -5,8 +5,17 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:FinalTuyetMaiPham"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Home" Height="450" Width="800">
     <Grid>
-        
+        <Button x:Name="btnClearData" Content="Clear Data" HorizontalAlignment="Left" Margin="157,57,0,0" VerticalAlignment="Top"/>
+        <Button x:Name="btnAdd" Content="Add New Product" HorizontalAlignment="Left" Margin="78,330,0,0" VerticalAlignment="Top"/>
+        <Button x:Name="btnSearch" Content="Search" HorizontalAlignment="Left" Margin="177,276,0,0" VerticalAlignment="Top"/>
+        <Button x:Name="btnGetAllProd" Content="Get All Products" HorizontalAlignment="Left" Margin="33,57,0,0" VerticalAlignment="Top"/>
+        <ComboBox x:Name="cmbCategories" HorizontalAlignment="Left" Margin="33,161,0,0" VerticalAlignment="Top" Width="183"/>
+        <TextBox x:Name="txtProdName" HorizontalAlignment="Left" Margin="33,277,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <DataGrid d:ItemsSource="{d:SampleData ItemCount=5}" Height="NaN" Margin="307,44,44,44" Width="NaN"/>
+        <Label Content="Get Products by Category" HorizontalAlignment="Left" Margin="33,108,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
+        <Label Content="Get Products by Name" HorizontalAlignment="Left" Margin="33,217,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
+
     </Grid>
 </Window>
