--- a/FinalTuyetMaiPham/MainWindow.xaml
+++ b/FinalTuyetMaiPham/MainWindow.xaml
@@ -9,7 +9,7 @@
     <Grid>
         <Button x:Name="btnClearData" Content="Clear Data" HorizontalAlignment="Left" Margin="157,57,0,0" VerticalAlignment="Top" Click="btnClearData_Click"/>
         <Button x:Name="btnAdd" Content="Add New Product" HorizontalAlignment="Left" Margin="78,330,0,0" VerticalAlignment="Top"/>
-        <Button x:Name="btnSearch" Content="Search" HorizontalAlignment="Left" Margin="177,276,0,0" VerticalAlignment="Top"/>
+        <Button x:Name="btnSearch" Content="Search" HorizontalAlignment="Left" Margin="177,276,0,0" VerticalAlignment="Top" Click="btnSearch_Click"/>
         <Button x:Name="btnGetAllProd" Content="Get All Products" HorizontalAlignment="Left" Margin="33,57,0,0" VerticalAlignment="Top" Click="btnGetAllProd_Click"/>
         <ComboBox x:Name="cmbCategories" HorizontalAlignment="Left" Margin="33,161,0,0" VerticalAlignment="Top" Width="183" SelectionChanged="cmbCategories_SelectionChanged"/>
         <TextBox x:Name="txtProdName" HorizontalAlignment="Left" Margin="33,277,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
