--- a/FinalTuyetMaiPham/AddProductWindow.xaml
+++ b/FinalTuyetMaiPham/AddProductWindow.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="FinalTuyetMaiPham.AddProd"
+﻿<Window x:Class="FinalTuyetMaiPham.AddProductWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:FinalTuyetMaiPham"
         mc:Ignorable="d"
-        Title="Add Product" Height="450" Width="800">
+        Title="AddProductWindow" Height="450" Width="800">
     <Grid>
         <Label Content="Add Product" HorizontalAlignment="Center" Margin="0,66,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="20"/>
         <Label Content="Category" HorizontalAlignment="Left" Margin="243,281,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
